after nbdev_docs command

--- a/00_spiral.ipynb
+++ b/00_spiral.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|hide\n",
+    "#| hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -34,16 +34,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|export\n",
+    "#| export\n",
     "def foo(): pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=6\n",
+    "print(a)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.0 ('trackingBudget')",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "161aae1071b5978da4bc8bde5056e43a6721fca2da7a2683eb53cb4b1e088680"
+   }
   }
  },
  "nbformat": 4,
