--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#|hide\n",
-    "from nbdevFirstTry.core import *"
+    "from nbdevFirstTry.spiral import *"
    ]
   },
   {
