works as function and as method

--- a/index.ipynb
+++ b/index.ipynb
@@ -14,9 +14,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Spiral\n",
     "\n",
-    "> Summary description here."
+    "> Create a spiral that keeps directions when it turns at\n",
+    "- max radius\n",
+    "- min radius (0)"
    ]
   },
   {
