optimized phi method using self. variables

--- a/00_spiral.ipynb
+++ b/00_spiral.ipynb
@@ -202,35 +202,39 @@
     "        \"\"\"\n",
     "        self.B = 8.6e-6 # spiral arm distance\n",
     "        self.v = 0.11 # spiral angular velocity\n",
+    "        self.flag_out=1\n",
+    "        self.t_max=0\n",
+    "        self.new_spiral=1\n",
+    "        self.spiral_count=0\n",
     "        \n",
     "    def phi_method(self,\n",
     "            B:float, # spiral arm distance\n",
     "            v:float, # spiral angular velocity\n",
-    "            t:float, # time\n",
-    "            flag_out:int, # indicated if spiral goes out- or inwards\n",
-    "            t_max:float, # time for one outward spiral_count\n",
-    "            spiral_count:int ):# counts the number of performed spirals\n",
+    "            r_max:float, # max radius in rad\n",
+    "            t:float): # time\n",
     "        \"compute phi and radius\"\n",
-    "        if flag_out:\n",
-    "            phi1 = np.sqrt(4*np.pi/B*v*(t-t_max*(spiral_count)))\n",
+    "        if self.new_spiral:\n",
+    "            self.t_max=3.14*(r_max)**2/(B*v) # calculate resulting spiral duration\n",
+    "        if self.flag_out:\n",
+    "            phi1 = np.sqrt(4*np.pi/B*v*(t-self.t_max*(self.spiral_count)))\n",
     "\n",
     "            r=B*phi1/(2*np.pi)\n",
     "        # print(phi1)\n",
     "            if r >= 800e-6:\n",
-    "                flag_out=0\n",
-    "                spiral_count=spiral_count+1\n",
+    "                self.flag_out=0\n",
+    "                self.spiral_count=self.spiral_count+1\n",
     "                #t_max=t\n",
     "        else:\n",
-    "            if ((4*np.pi/B*v*((spiral_count+1)*t_max-t))>=0):\n",
-    "                phi1 = np.sqrt(4*np.pi/B*v*((spiral_count+1)*t_max-t))\n",
+    "            if ((4*np.pi/B*v*((self.spiral_count+1)*self.t_max-t))>=0):\n",
+    "                phi1 = np.sqrt(4*np.pi/B*v*((self.spiral_count+1)*self.t_max-t))\n",
     "                \n",
     "            else:\n",
     "                phi1=0.0\n",
     "            r=B*phi1/(2*np.pi)\n",
     "            if r <= 5e-6:\n",
-    "                flag_out=1  \n",
-    "                spiral_count=spiral_count+1  \n",
-    "        return phi1, flag_out, r, spiral_count"
+    "                self.flag_out=1  \n",
+    "                self.spiral_count=self.spiral_count+1  \n",
+    "        return phi1, r"
    ]
   },
   {
@@ -252,8 +256,7 @@
        "\n",
        "#### DutPatLoop.phi_method\n",
        "\n",
-       ">      DutPatLoop.phi_method (B:float, v:float, t:float, flag_out:int,\n",
-       ">                             t_max:float, spiral_count:int)\n",
+       ">      DutPatLoop.phi_method (B:float, v:float, r_max:float, t:float)\n",
        "\n",
        "compute phi and radius\n",
        "\n",
@@ -261,13 +264,11 @@
        "| -- | -------- | ----------- |\n",
        "| B | float | spiral arm distance |\n",
        "| v | float | spiral angular velocity |\n",
-       "| t | float | time |\n",
-       "| flag_out | int | indicated if spiral goes out- or inwards |\n",
-       "| t_max | float | time for one outward spiral_count |\n",
-       "| spiral_count | int | counts the number of performed spirals |"
+       "| r_max | float | max radius in rad |\n",
+       "| t | float | time |"
       ],
       "text/plain": [
-       "<nbdev.showdoc.BasicMarkdownRenderer at 0x7ff09db971c0>"
+       "<nbdev.showdoc.BasicMarkdownRenderer at 0x7fedc21abd30>"
       ]
      },
      "execution_count": null,
@@ -288,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create the necessary inputs"
+    "Spiral parameters"
    ]
   },
   {
@@ -297,11 +298,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.linspace(0,40,100)\n",
     "v = 0.11 # velocity in rad/s\n",
     "B = 8.6e-6 # spiral arm distance\n",
     "r_max=800e-6 # max radius in rad\n",
     "t_max=3.14*(r_max)**2/(B*v) # calculate resulting spiral duration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.12431289640592"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_max"
    ]
   },
   {
@@ -327,10 +347,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.6e-06"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dut_pat_loop.B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
-    "flag_out=1\n",
+    "\n",
     "t = np.linspace(0,12,1000)\n",
     "phi_list_method=[]\n",
     "time_list_method=[]\n",
@@ -340,14 +380,14 @@
     "spiral_count_list_method=[]\n",
     "for i in t:\n",
     "    #print(i)\n",
-    "    phi1,flag_out, r, spiral_count=dut_pat_loop.phi_method(B,v,i, flag_out, t_max,spiral_count)\n",
+    "    phi1, r=dut_pat_loop.phi_method(B, v, r_max, i)\n",
     "    #\n",
     "    # print(phi1, flag_out)\n",
     "    phi_list_method.append(phi1)\n",
     "    time_list_method.append(i)\n",
-    "    flag_out_list_method.append(flag_out)\n",
+    "    flag_out_list_method.append(dut_pat_loop.flag_out)\n",
     "    r_list_method.append(r)\n",
-    "    spiral_count_list_method.append(spiral_count)\n"
+    "    spiral_count_list_method.append(dut_pat_loop.spiral_count)\n"
    ]
   },
   {
@@ -385,13 +425,29 @@
     "axs[0,1].plot(time_list_method,phi_list_method, 'b')\n",
     "axs[0,2].plot(time_list_method,flag_out_list_method, 'r')\n",
     "axs[1,0].plot(time_list_method,spiral_count_list_method, 'r', label='D=1m')\n",
-    "# plt.title(\"Spiral vs time\")\n",
-    "# plt.xlabel(\"time [s]\")\n",
-    "# plt.ylabel(\"phi\")\n",
-    "# show the plot\n",
-    "#plt.xlim((10,2e4))\n",
-    "#plt.ylim((1e-19,1e-12))\n",
+    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/uwesterr/CloudProjectsUnderWork/ProjectsUnderWork/nbdevFirstTry/00_spiral.ipynb Cell 25\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/uwesterr/CloudProjectsUnderWork/ProjectsUnderWork/nbdevFirstTry/00_spiral.ipynb#ch0000024?line=0'>1</a>\u001b[0m \u001b[39massert\u001b[39;00m phi_list_method\u001b[39m==\u001b[39mphi_list\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "assert phi_list_method==phi_list"
    ]
   },
   {
