--- a/index.ipynb
+++ b/index.ipynb
@@ -14,17 +14,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spiral\n",
-    "\n",
-    "> Create a spiral that keeps directions when it turns at\n",
-    "- max radius\n",
-    "- min radius (0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "This file will become your README and also the index of your documentation."
    ]
   },
@@ -39,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install your_project_name`"
+    "`pip install nbdevFirstTry`"
    ]
   },
   {
@@ -57,23 +46,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spiral\n",
+    "\n",
+    "> Create a spiral that keeps directions when it turns at\n",
+    "- max radius\n",
+    "- min radius (0)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "1000"
       ]
      },
-     "execution_count": null,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1+1"
+    "1+999"
    ]
   },
   {
@@ -81,14 +81,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "5/7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "jsut text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.0 ('trackingBudget')",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "161aae1071b5978da4bc8bde5056e43a6721fca2da7a2683eb53cb4b1e088680"
+   }
   }
  },
  "nbformat": 4,
