cleaned up and updated index file

--- a/00_spiral.ipynb
+++ b/00_spiral.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "#| export\n",
     "import numpy as np\n",
-    "import  matplotlib.pyplot as plt\n"
+    "import  matplotlib.pyplot as plt\n",
+    "from fastcore.utils import *\n"
    ]
   },
   {
@@ -269,7 +270,7 @@
        "| t | float | time |"
       ],
       "text/plain": [
-       "<nbdev.showdoc.BasicMarkdownRenderer at 0x7fdc97f6c3d0>"
+       "<nbdev.showdoc.BasicMarkdownRenderer at 0x7f7e29467af0>"
       ]
      },
      "execution_count": null,
@@ -350,6 +351,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export \n",
     "#| hide\n",
     "\n",
     "t = np.linspace(0,12,1000)\n",
@@ -375,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plots of the phase of spiral\n",
+    "## Plots of the spiral phase\n",
     "The plot ought to be the same as in @fig-polar."
    ]
   },
@@ -398,6 +400,7 @@
     }
    ],
    "source": [
+    "#| export \n",
     "#| label: fig-polar-method\n",
     "#|echo: false\n",
     "fig, axs = plt.subplots(2,3)\n",
@@ -431,8 +434,9 @@
    "metadata": {},
    "source": [
     "## Extract method\n",
-    "using @patch from fastcore.utils one can define methods outside the class code which gives:\n",
-    "- more flexibility in adding markdown describing what the method will do\n",
+    "using @patch from fastcore.utils one can define methods outside the class code which gives:  \n",
+    "\n",
+    "- more flexibility in adding markdown describing what the method will do  \n",
     "- adds automatically a description to the method"
    ]
   },
@@ -449,6 +453,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "dut_pat_loop_extract=DutPatLoop()"
    ]
   },
@@ -458,6 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "@patch\n",
     "def phi_method_extract(self:DutPatLoop,\n",
     "        B:float, # spiral arm distance\n",
@@ -520,7 +526,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plots of the phase of spiral\n",
+    "## Plots of the spiral phase\n",
     "The plot ought to be the same as in @fig-polar."
    ]
   },
@@ -554,53 +560,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(346.246798781543, 0.00047391925018011583)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dut_pat_loop.phi_method_extract(B, v, r_max, i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(346.246798781543, 0.00047391925018011583)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dut_pat_loop_extract.phi_method_extract(B, v, r_max, i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
