--- a/index.ipynb
+++ b/index.ipynb
@@ -53,43 +53,16 @@
     "\n",
     "> Create a spiral that keeps directions when it turns at\n",
     "- max radius\n",
-    "- min radius (0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1000"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+999"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "5/7"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "jsut text"
+    "- min radius (0)\n",
+    "\n",
+    "The functionality is implemented three times\n",
+    "\n",
+    "- as function\n",
+    "- as method of a class\n",
+    "    - defined inside the class\n",
+    "    - defined outside the class defintion using @patch decorator of fastcore.utilis\n",
+    "\n",
+    "- "
    ]
   },
   {
