--- a/index.ipynb
+++ b/index.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Spiral\n",
+    "## Spiral generation\n",
     "\n",
     "> Create a spiral that keeps directions when it turns at\n",
     "- max radius\n",
